--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "cloudinary": "^2.8.0",
     "dayjs": "^1.11.19",
     "mongoose": "^8.19.4",
-    "next": "16.0.1",
+    "next": "^16.1.1",
     "ogl": "^1.0.11",
     "postcss-nesting": "^13.0.2",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.66.1",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
